Add basic HTML structure to book-form element

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     src: url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap') format("embedded-opentype");
 }
 
+.header-div{
+    justify-self: center;
+}
+
 .book-container{
     display: grid;
     justify-content: center;
