--- a/style.css
+++ b/style.css
@@ -18,6 +18,15 @@ h1{
     margin-bottom: 10px;
 }
 
+.new-button{
+    font-size: 1rem;
+    border-radius: 6px;
+    border-style: none;
+    background-color: rgb(255, 164, 45);
+    padding: 15px;
+    font-weight: 600;
+}
+
 .book-form form:first-of-type{
     display: grid;
 }
@@ -26,6 +35,7 @@ h1{
     padding: 40px;
     background-color: rgb(241, 216, 178);
     border-radius: 10px;
+    font-weight: 600;
 }
 
 .book-form label{
@@ -40,11 +50,19 @@ h1{
     border-radius: 4px;
     border-style: none;
     background-color: rgb(255, 249, 240);
+    font-size: 1rem;
+    padding: 5px;
 }
 
 .book-form button{
     margin-left: 20px;
+    margin-top: 30px;
     font-size: 1rem;
+    border-radius: 6px;
+    border-style: none;
+    background-color: rgb(255, 164, 45);
+    padding: 10px;
+    font-weight: 600;
 }
 
 .bottom-div{
